<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SelectImageActivity">
    <item
        android:id="@+id/action_play_in_sound"
        android:orderInCategory="100"
        android:title="@string/action_play_in_sound"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play_out_sound"
        android:orderInCategory="100"
        android:title="@string/action_play_out_sound"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play_video"
        android:orderInCategory="100"
        android:title="@string/action_play_video"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_debug_mode"
        android:orderInCategory="100"
        android:title="@string/action_debug_mode_on"
        android:visible="true"
        app:showAsAction="never" />
</menu>
